--- a/Python 2.1 CodeAlong Rangers.ipynb
+++ b/Python 2.1 CodeAlong Rangers.ipynb
@@ -860,23 +860,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 148,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Derek Hawkins / @derekhawkins\n",
+      "\n",
+      " Erik Sven-Osterberg / @sverik\n",
+      "\n",
+      " Ryan Butz / @ryanbutz\n",
+      "\n",
+      " Example Exampleson / @example\n",
+      "\n",
+      " Ripal Pael / @ripalp\n",
+      "\n",
+      " Darth Vader / @darthvader\n"
+     ]
+    }
+   ],
    "source": [
     "# Hint - use .group()\n",
     "\n",
-    "twitter_handles = 'Derek Hawkins, @derekhawkins, Erik Sven-Osterberg, @sverik, Ryan Butz, @ryanbutz, Example Exampleson, @example, Ripal Pael, @ripalp, Darth Vader, @darthvader'\n",
     "\n",
-    "pattern = r\"([A-Za-z\\s-]+) / @([A-Za-z0-9_]+)\"\n",
+    "with open('names.txt') as f:\n",
+    "    data = f.readlines()\n",
+    "    \n",
+    "pattern = re.compile(\"([A-Z][a-z]+), ([\\w -]*)([A-Z][a-z]+).*\\s(@[a-zA-Z0-9]+$)\")\n",
     "\n",
-    "matches = re.findall(pattern, twitter_handles)\n",
+    "for person in data:\n",
+    "    match = pattern.search(person)\n",
+    "    \n",
+    "    if match:\n",
+    "        print('\\n', f\"{match.group(3)} {match.group(2)}{match.group(1)} / {match.group(4)}\")\n",
     "\n",
-    "for match in matches:\n",
-    "    name, handle = match\n",
-    "    print(f\"{name.strip()} / @{handle}\")"
+    "\n"
    ]
   },
   {
@@ -908,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +954,7 @@
     "for name in names:\n",
     "    proper_name = re.match(r'[A-Za-z]+[\" \"][A-Z][- a-zA-Z]+',name)\n",
     "    if proper_name:\n",
-    "        print(proper_name.group())\n",
+    "        print(proper_name.group(0))\n",
     "    else:\n",
     "        print(None)\n"
    ]
